# dummyfunction

./: MANIFEST.in  Makefile  README.rst  pyproject.toml
docs/: CNAME  index.html  v1.0.rst  v1.1.rst
src/dummyfunction/: __init__.py
src/dummyfunction/core/: __init__.py
src/dummyfunction/tests/: __init__.py  test_1984.py  test_TestDummyFunction.py
