[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=77.0",
]

[project]
authors = [
    { email = "johannes.programming@gmail.com", name = "Johannes" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]
dependencies = []
description = "This project provides the dummy function."
keywords = []
license = "MIT"
license-files = [
    "LICENSE.txt",
]
name = "dummyfunction"
readme = "README.rst"
requires-python = ">=3.11"
version = "1.0.7"

[project.urls]
Download = "https://pypi.org/project/dummyfunction/#files"
Index = "https://pypi.org/project/dummyfunction/"
Source = "https://github.com/johannes-programming/dummyfunction/"
Website = "https://dummyfunction.johannes-programming.online/"

[tool.mypy]
files = [
    ".",
]
overrides = [
    { module = [], ignore_missing_imports = true },
]
python_version = "3.11"
strict = false
